More work on position calcs

--- a/SteeringAngleCalculations.ipynb
+++ b/SteeringAngleCalculations.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [
     {
@@ -169,11 +169,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [],
    "source": [
-    "left = False\n",
+    "left = True\n",
     "front = True"
    ]
   },
@@ -187,13 +187,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 356,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[8.0, 8.0]"
+       "[-8.0, 8.0]"
       ]
      },
      "metadata": {},
@@ -218,11 +218,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 357,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "distanceBetweenWheelsCm = steerablePosRelativeToRoverY"
+    "distanceBetweenWheelsCm = steerablePosRelativeToRoverY\n",
+    "display(distanceBetweenWheelsCm)"
    ]
   },
   {
@@ -235,13 +246,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "46.07016386514907"
+       "-46.07016386514907"
       ]
      },
      "metadata": {},
@@ -253,9 +264,19 @@
     "# units called 'radians', so we have to convert first.\n",
     "\n",
     "wheelAngleRelativeToVehicleRadians = (wheelAngleRelativeToVehicleDegrees / 180.0) * math.pi\n",
-    "radiusCm = distanceBetweenWheelsCm / math.sin(wheelAngleRelativeToVehicleRadians)\n",
+    "turningRadiusToSteerableWheelCm = distanceBetweenWheelsCm / math.sin(wheelAngleRelativeToVehicleRadians)\n",
     "\n",
-    "display(radiusCm)"
+    "display(turningRadiusToSteerableWheelCm)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a negative number, signifying that the centre of the turning circle is to the wheel's left side (which is because the wheel is pointing slightly to the left). If the wheel had been pointing slightly to the right, it would be a positive number, signifying that the turning circle centre is to the wheel's right side.\n",
+    "\n",
+    "Note that this doesn't mean the turning circle centre is necessarily to the left of the vehicle. If the wheel were able to turn more than 90 degrees, its left side would have turned around so far that it was pointing to the right hand side of the vehicle."
    ]
   },
   {
@@ -270,13 +291,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "289.4673766968605"
+       "-289.4673766968605"
       ]
      },
      "metadata": {},
@@ -284,9 +305,17 @@
     }
    ],
    "source": [
-    "circumferenceCm = 2*math.pi*radiusCm\n",
+    "circumferenceCm = 2*math.pi*turningRadiusToSteerableWheelCm\n",
     "\n",
     "display(circumferenceCm)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This number comes out negative, which may seem a bit odd - a circle can't have a negative circumference. But that's happened just because the turning radius also came out negative, and all that really tells us was that the centre of the turning circle was on the wheel's left side."
    ]
   },
   {
@@ -299,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +342,7 @@
     }
    ],
    "source": [
-    "revolutionsPerSecond = wheelSpeedCmPerSecond / circumferenceCm\n",
+    "revolutionsPerSecond = wheelSpeedCmPerSecond / -circumferenceCm\n",
     "display(revolutionsPerSecond)"
    ]
   },
@@ -322,12 +351,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Again notice that this is negative. This now signifies anticlockwise rotation. If the wheel had been turned slightly to the right, `circumferenceCm` would be positive, signifying clockwise rotation.\n",
+    "\n",
     "Now we're going to use that to work out how far it's actually going to turn round in the next fraction of a second that we're thinking about. Exactly how much time are we thinking about? Let's put that in a variable:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +423,159 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So it hasn't turned much - just 0.622 degrees (roughly). But then we're only talking about what it does in a tenth of a second. And the wheel wasn't turned by much. So it shouldn't be surprising. Earlier, we worked out that the turning circle has a radius of about 46cm, and a circumference of about 289cm, so if it's travelling at about 5cm per second, we'd expect it to take quite a long time to complete one rotation."
+    "So it hasn't turned much - just 0.622 degrees (roughly). But then we're only talking about what it does in a tenth of a second. And the wheel wasn't turned by much. So it shouldn't be surprising. Earlier, we worked out that the turning circle has a radius of about 46cm, and a circumference of about 289cm, so if it's travelling at about 5cm per second, we'd expect it to take quite a long time to complete one rotation.\n",
+    "\n",
+    "So we know now by how much the rover will turn in the time slice we're looking at. But where will it move to? For this, we need to work out where the middle of the turning circle is. We know how far it is from the steerable wheel, but we don't yet have its location. We can do this with trigonometry too. We'll first work it out relative to the rover. This makes it simple because we know it's going to be directly to the left or right - it's the corner of the right-angled triangle formed by a line from the centre to the corner wheel and the line going through the middle of the rover.\n",
+    "\n",
+    "We can work out the distance:\n",
+    "\n",
+    "$$cos (\\theta) * turningCircleRadius$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 363,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-53.370254556941674"
+      ]
+     },
+     "execution_count": 363,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "turningCircleCentreDistanceFromVehicleCentre = math.cos(wheelAngleRelativeToVehicleRadians) * turningRadiusToSteerableWheelCm + steerablePosRelativeToRoverX\n",
+    "\n",
+    "turningCircleCentreDistanceFromVehicleCentre"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That's about 37 cm to the left of the centre of the rover. (The negative value puts it to the left.) That sounds about right - we worked out the steerable front wheel was about 46cm from the circle's centre. We'd expect the middle wheel to be a teeny bit closer, and then the middle wheel is about 8cm from the centre of the rover so it'll be closer still.\n",
+    "\n",
+    "But now we need to take into account the rover's rotation and position. First we'll do rotation, again with more trigonometry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 364,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-53.370254556941674, -0.0]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "vehicleHeadingRadians = math.radians(vehicleHeadingDegrees)\n",
+    "turningCircleRelativeToVehicleX = turningCircleCentreDistanceFromVehicleCentre * math.cos(vehicleHeadingRadians)\n",
+    "turningCircleRelativeToVehicleY = turningCircleCentreDistanceFromVehicleCentre * math.sin(vehicleHeadingRadians)\n",
+    "\n",
+    "display([turningCircleRelativeToVehicleX, turningCircleRelativeToVehicleY])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we adjust this by the vehicle's current position to get the position of the turning circle centre in absolute coordinates."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 365,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-53.370254556941674, 0.0]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "turningCircleX = turningCircleRelativeToVehicleX + vehicleXcm\n",
+    "turningCircleY = turningCircleRelativeToVehicleY + vehicleYcm\n",
+    "\n",
+    "display([turningCircleX, turningCircleY])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can use this to work out where the vehicle's going to move to as it goes around the turning circle.\n",
+    "\n",
+    "We'll start by working out what its current angle on the circle is. (Although we're mostly measing angles as headings in degrees, with North being 0, the `math.atan2` function we're using here will has 0 degrees at 3 o'clock, and measures anticlockwise in radians.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 366,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "currentAngleOnTurningCircleRadians = math.atan2(vehicleYcm - turningCircleY, vehicleXcm - turningCircleX)\n",
+    "display(currentAngleOnTurningCircleRadians)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we can add to this the amount by which the vehicle is going to turn in this time slice, and then use that to work out the new vehicle position."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 367,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-0.0031431529175591777, 0.5792165944037518]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "updatedAngleOnTurningCircleRadians = currentAngleOnTurningCircleRadians + headingChangeRadians\n",
+    "updatedVehicleX = turningCircleX - turningCircleCentreDistanceFromVehicleCentre * math.cos(updatedAngleOnTurningCircleRadians)\n",
+    "updatedVehicleY = turningCircleY - turningCircleCentreDistanceFromVehicleCentre * math.sin(updatedAngleOnTurningCircleRadians)\n",
+    "\n",
+    "display([updatedVehicleX, updatedVehicleY])"
    ]
   }
  ],
@@ -412,7 +595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
