More steering calcs

--- a/SteeringAngleCalculations.ipynb
+++ b/SteeringAngleCalculations.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,15 +43,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Set the motor speed and steering angle for a wheel:"
+    "Set the initial position, orientation, motor speed and steering angle for a wheel:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
+    "vehicleHeadingDegrees = 0 # North\n",
+    "vehicleXcm = 0\n",
+    "vehicleYcm = 0\n",
+    "\n",
     "wheelSpeed = 50\n",
     "wheelAngleRelativeToVehicleDegrees = -10 # Anticlockwise, so aiming slightly to the left"
    ]
@@ -66,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -328,13 +332,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.01727310364661977"
+       "-0.01727310364661977"
       ]
      },
      "metadata": {},
@@ -342,7 +346,7 @@
     }
    ],
    "source": [
-    "revolutionsPerSecond = wheelSpeedCmPerSecond / -circumferenceCm\n",
+    "revolutionsPerSecond = wheelSpeedCmPerSecond / circumferenceCm\n",
     "display(revolutionsPerSecond)"
    ]
   },
@@ -358,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,13 +381,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.001727310364661977"
+       "-0.001727310364661977"
       ]
      },
      "metadata": {},
@@ -392,7 +396,7 @@
     {
      "data": {
       "text/plain": [
-       "0.6218317312783117"
+       "-0.6218317312783117"
       ]
      },
      "metadata": {},
@@ -401,7 +405,7 @@
     {
      "data": {
       "text/plain": [
-       "0.010853011104183147"
+       "-0.010853011104183147"
       ]
      },
      "metadata": {},
@@ -434,22 +438,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-53.370254556941674"
+       "-37.370254556941674"
       ]
      },
-     "execution_count": 363,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "turningCircleCentreDistanceFromVehicleCentre = math.cos(wheelAngleRelativeToVehicleRadians) * turningRadiusToSteerableWheelCm + steerablePosRelativeToRoverX\n",
+    "turningCircleCentreDistanceFromVehicleCentre = math.cos(wheelAngleRelativeToVehicleRadians) * turningRadiusToSteerableWheelCm - steerablePosRelativeToRoverX\n",
     "\n",
     "turningCircleCentreDistanceFromVehicleCentre"
    ]
@@ -466,13 +470,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[-53.370254556941674, -0.0]"
+       "[-37.370254556941674, -0.0]"
       ]
      },
      "metadata": {},
@@ -497,13 +501,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[-53.370254556941674, 0.0]"
+       "[-37.370254556941674, 0.0]"
       ]
      },
      "metadata": {},
@@ -529,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -552,18 +556,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we can add to this the amount by which the vehicle is going to turn in this time slice, and then use that to work out the new vehicle position."
+    "We already have the amount by which the vehicle is going to turn in this time slice. Negative numbers represent anticlockwise movement, but with trig, positive angles are anticlockwise, so we actually subtract the change in angle from the current angle on the turning circle."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[-0.0031431529175591777, 0.5792165944037518]"
+       "[-0.002200859366624286, 0.40557182565766303]"
       ]
      },
      "metadata": {},
@@ -571,11 +575,31 @@
     }
    ],
    "source": [
-    "updatedAngleOnTurningCircleRadians = currentAngleOnTurningCircleRadians + headingChangeRadians\n",
-    "updatedVehicleX = turningCircleX - turningCircleCentreDistanceFromVehicleCentre * math.cos(updatedAngleOnTurningCircleRadians)\n",
-    "updatedVehicleY = turningCircleY - turningCircleCentreDistanceFromVehicleCentre * math.sin(updatedAngleOnTurningCircleRadians)\n",
+    "updatedAngleOnTurningCircleRadians = currentAngleOnTurningCircleRadians - headingChangeRadians\n",
+    "updatedVehicleX = turningCircleX + abs(turningCircleCentreDistanceFromVehicleCentre) * math.cos(updatedAngleOnTurningCircleRadians)\n",
+    "updatedVehicleY = turningCircleY + abs(turningCircleCentreDistanceFromVehicleCentre) * math.sin(updatedAngleOnTurningCircleRadians)\n",
     "\n",
     "display([updatedVehicleX, updatedVehicleY])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9999411066530663"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.cos(updatedAngleOnTurningCircleRadians)"
    ]
   }
  ],
@@ -595,7 +619,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
