--- a/SteeringAngleCalculations.ipynb
+++ b/SteeringAngleCalculations.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,13 +48,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [],
    "source": [
     "vehicleHeadingDegrees = 0 # North\n",
     "vehicleXcm = 0\n",
     "vehicleYcm = 0\n",
+    "\n",
+    "# Values after 1 iteration\n",
+    "vehicleHeadingDegrees = -0.6218317312783117\n",
+    "vehicleXcm = -0.002200859366624286\n",
+    "vehicleYcm = 0.40557182565766303\n",
     "\n",
     "wheelSpeed = 50\n",
     "wheelAngleRelativeToVehicleDegrees = -10 # Anticlockwise, so aiming slightly to the left"
@@ -70,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +452,7 @@
        "-37.370254556941674"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 325,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,18 +470,18 @@
    "source": [
     "That's about 37 cm to the left of the centre of the rover. (The negative value puts it to the left.) That sounds about right - we worked out the steerable front wheel was about 46cm from the circle's centre. We'd expect the middle wheel to be a teeny bit closer, and then the middle wheel is about 8cm from the centre of the rover so it'll be closer still.\n",
     "\n",
-    "But now we need to take into account the rover's rotation and position. First we'll do rotation, again with more trigonometry"
+    "But now we need to take into account the rover's rotation and position. First we'll do rotation, again with more trigonometry. Notice that we negate the `vehicleHeadingRadians` because we're using positive values to signify clockwise rotation, as is normal with compass headings, but generally in mathematics, positive values denote anticlockwise changes in angle, and Python's `math.cos` and `math.sin` use that convention. So we negate the angle to deal with that."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[-37.370254556941674, -0.0]"
+       "[-37.36805369757505, -0.40557182565766303]"
       ]
      },
      "metadata": {},
@@ -485,8 +490,8 @@
    ],
    "source": [
     "vehicleHeadingRadians = math.radians(vehicleHeadingDegrees)\n",
-    "turningCircleRelativeToVehicleX = turningCircleCentreDistanceFromVehicleCentre * math.cos(vehicleHeadingRadians)\n",
-    "turningCircleRelativeToVehicleY = turningCircleCentreDistanceFromVehicleCentre * math.sin(vehicleHeadingRadians)\n",
+    "turningCircleRelativeToVehicleX = turningCircleCentreDistanceFromVehicleCentre * math.cos(-vehicleHeadingRadians)\n",
+    "turningCircleRelativeToVehicleY = turningCircleCentreDistanceFromVehicleCentre * math.sin(-vehicleHeadingRadians)\n",
     "\n",
     "display([turningCircleRelativeToVehicleX, turningCircleRelativeToVehicleY])"
    ]
@@ -501,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
@@ -533,13 +538,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "0.01085301110418315"
       ]
      },
      "metadata": {},
@@ -561,13 +566,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[-0.002200859366624286, 0.40557182565766303]"
+       "[-0.008803178234529696, 0.8110958803508561, -1.2436634625566234]"
       ]
      },
      "metadata": {},
@@ -579,21 +584,21 @@
     "updatedVehicleX = turningCircleX + abs(turningCircleCentreDistanceFromVehicleCentre) * math.cos(updatedAngleOnTurningCircleRadians)\n",
     "updatedVehicleY = turningCircleY + abs(turningCircleCentreDistanceFromVehicleCentre) * math.sin(updatedAngleOnTurningCircleRadians)\n",
     "\n",
-    "display([updatedVehicleX, updatedVehicleY])"
+    "display([updatedVehicleX, updatedVehicleY, vehicleHeadingDegrees + headingChangeDegrees])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9999411066530663"
+       "0.9997644335491181"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 330,
      "metadata": {},
      "output_type": "execute_result"
     }
